--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 		<header class="clearfix">
 			<span class="logo"><img src="https://dreit.ru/images/logo_Bookman-Old-Style.svg" width="220" alt="Pavel Dreit"></span><span class="light"> — вёрстка, frontend</span>
 		</header>
-		<div id="hidden">Сапожник без сапог</div>
+		<div id="hidden">Сапожник без сапог :)</div>
 		<div class="description">
 			<section>
 				<h2>Кто это?</h2>
