--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 <body>
 	<div class="wrapper">
 		<header class="clearfix">
-			<span class="logo"><img src="https://dreit.ru/images/logo_Bookman-Old-Style.svg" width="220" alt="Pavel Dreit"></span><span class="light"> — вёрстка, frontend</span>
+			<span class="logo"><img src="https://dreit.ru/images/logo_Bookman-Old-Style.svg" width="220" alt="Pavel Dreit"></span><span class="light"> — markup, frontend</span>
 		</header>
 		<div id="hidden">Сапожник без сапог :)</div>
 		<div class="description">
