--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 			newLink.rel = 'noopener noreferrer';
 			newLink.innerHTML = aData.html;
 
+			const otherAttr = { ...aData };
 			const notNeededAttr = [
 				'data-link',
 				'html',
