Rename instagram for global

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 				<li>Страница <a class="hidden-link" data-link="https://vk.com/pavel.dreit" target="_blank" rel="noopener noreferrer" onclick="yaCounter36810675.reachGoal('vk'); return true;">«Вконтакте»</a></li>
 				<li>E-mail: <a href="mailto://pavel@dreit.ru" onclick="yaCounter36810675.reachGoal('mail'); return true;">pavel@dreit.ru</a></li>
 				<li>Telegram: <a class="hidden-link" target="_blank" rel="noopener noreferrer" data-link="https://t.me/dreit" onclick="yaCounter36810675.reachGoal('telegram'); return true;">@dreit</a></li>
-				<li>Photos: <a class="hidden-link" target="_blank" rel="noopener noreferrer" data-link="https://www.instagram.com/pavel.dreit/" onclick="yaCounter36810675.reachGoal('instagrgam'); return true;">@pavel.dreit</a></li>
+				<li>Instagram: <a class="hidden-link" target="_blank" rel="noopener noreferrer" data-link="https://www.instagram.com/pavel.dreit/" onclick="yaCounter36810675.reachGoal('instagrgam'); return true;">@pavel.dreit</a></li>
 				<li>Spotify: <a class="hidden-link" target="_blank" rel="noopener noreferrer" data-link="https://open.spotify.com/user/dreit.p?si=2264bb892a564fe8" onclick="yaCounter36810675.reachGoal('spotify'); return true;">@dreit.p</a></li>
 				<li>Strava: <a class="hidden-link" target="_blank" rel="noopener noreferrer" data-link="https://www.strava.com/athletes/18497739" onclick="yaCounter36810675.reachGoal('strava'); return true;">Pavel Dreit</a></li>
 			</ul>
